--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ packages = [{include = "muscles", from = "src", to = "muscles.asgi"}]
 python = "^3.9"
 #muscles = {develop = true, version = "^0.0.2", path = "../muscles"}
 watchdog = "^4.0.0"
-uwsgi = "==2.0.20"
 jinja2 = "==3.1.2"
 jsonschema = "==4.16.0"
 python-magic = "==0.4.27"
@@ -24,6 +23,8 @@ requests-toolbelt = "^1.0.0"
 dnspython = "==2.6.1"
 pytest = "==7.1.3"
 setuptools = "==69.0.2"
+uvicorn = "^0.30.6"
+asyncpg = "^0.29.0"
 
 
 [tool.poetry.dev-dependencies]
