--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ name = "muscles-asgi"
 version = "0.0.3"
 description = ""
 authors = ["Denis B. <denis@butko.info>"]
-packages = [{include = "muscles", from = "src", to = "muscles.asgi"}]
+packages = [{include = "muscles", from = "src"}]
 
 
 [tool.poetry.dependencies]
