--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ pytest = "==7.1.3"
 setuptools = "==69.0.2"
 uvicorn = "^0.30.6"
 asyncpg = "^0.29.0"
+python-multipart = "^0.0.10"
 
 
 [tool.poetry.dev-dependencies]
